# foodgram

./: .env.example  README.md  docker-compose.production.yml  foodgram_workflow.yml
backend/: .pre-commit-config.yaml  Dockerfile  config.py  pyproject.toml  requirements.txt
backend/api/: constants.py  filters.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
backend/common/: constants.py
backend/fixtures/: load_initial_data.py  superuser.json  tags.json
backend/foodgram_backend/: settings.py  urls.py
backend/ingredients/: admin.py  models.py  serializers.py  urls.py  views.py
backend/ingredients/migrations/: 0001_initial.py
backend/recipes/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/recipes/migrations/: 0001_initial.py  0002_alter_recipeingredient_amount_and_more.py  0002_initial.py  0003_alter_favorite_options_alter_ingredient_options_and_more.py  0003_alter_recipe_image.py  0003_alter_recipeingredient_ingredient_and_more.py  0004_favorite.py  0005_alter_favorite_recipe_shoppingcart.py
backend/tags/: models.py  serializers.py  urls.py  views.py
backend/tags/migrations/: 0001_initial.py  0002_alter_tag_name_alter_tag_slug.py  0003_alter_tag_slug.py
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_follow_options_alter_user_options_and_more.py  0002_alter_subscription_options_alter_user_options_and_more.py  0002_alter_user_managers.py  0002_user_avatar.py  0003_alter_user_avatar_follow.py  0004_subscription_delete_follow.py  0005_alter_user_avatar_alter_user_email_and_more.py  0006_alter_subscription_author_alter_subscription_user.py  (+1 more)
docs/: redoc.html
(+8 files in other folders)
